--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "material-design-icons": "^3.0.1",
+    "muse-ui": "^3.0.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
